--- a/templates/back.html.twig
+++ b/templates/back.html.twig
@@ -15,12 +15,15 @@
     <link rel="stylesheet" href="{{ asset('back/assets/css/dashlite6e0e.css?ver=3.0.0') }}">
     <link id="skin-default" rel="stylesheet" href="{{ asset('back/assets/css/theme6e0e.css?ver=3.0.0') }}">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-91615293-4">
-
     </script>
     <script>window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'UA-91615293-4');</script>
+ <div class="loader"></div> 
+
 </head>
+ <div class="loader"></div> 
 
 <body class="nk-body bg-lighter npc-general has-sidebar ">
+
 <div class="nk-app-root">
     <div class="nk-main ">
         <div class="nk-sidebar nk-sidebar-fixed is-dark " data-content="sidebarMenu">
@@ -68,7 +71,7 @@
                                 </a>
                             </li>
                             <li class="nk-menu-item">
-                                <a href="customer-list.html" class="nk-menu-link">
+                                <a href="user/back" class="nk-menu-link">
                                         <span class="nk-menu-icon">
                                             <em class="icon ni ni-user-list-fill">
 
@@ -796,6 +799,8 @@
 <script src="{{ asset('back/assets/js/scripts6e0e.js?ver=3.0.0') }}"></script>
 <script src="{{ asset('back/assets/js/demo-settings6e0e.js?ver=3.0.0') }}"></script>
 <script src="{{ asset('back/assets/js/charts/chart-crm6e0e.js?ver=3.0.0') }}"></script>
+ <div class="loader"></div> 
+
 </body>
 <!-- Mirrored from dashlite.net/demo1/crm/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 03 Apr 2022 15:48:05 GMT -->
 
