--- a/templates/user/Travailleur/TravailleurManageOffres.html.twig
+++ b/templates/user/Travailleur/TravailleurManageOffres.html.twig
@@ -55,6 +55,7 @@
                                                 </div>
 
                                                 <div class="body">
+                                                <a href="{{ path('app_entretien_index') }}">Create new booking</a>
                                                     <h5><a href="{{ path('user_show', {id: apply.UserId}) }}">{{apply.societe}}</a></h5>
                                                     <div class="info">
                                                         <span class="designation"><a href="#"><i data-feather="check-square"></i>{{apply.job}}</a></span>
