--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,6 +5,9 @@
     {% block head %}
         {% block stylesheet %}
             <meta charset="UTF-8">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fullcalendar/core@4.1.0/main.min.css">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid@4.1.0/main.min.css">
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fullcalendar/timegrid@4.1.0/main.min.css">
             <link rel="stylesheet" href="{{ asset('build/final/assets/css/bootstrap.min.css') }}">
             <link rel="stylesheet" href="{{ asset('build/final/assets/css/fontawesome-all.min.css') }}">
             <link rel="stylesheet" href="{{ asset('build/final/assets/css/themify-icons.css') }}">
@@ -338,6 +341,10 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/core@4.1.0/main.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/interaction@4.1.0/main.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid@4.1.0/main.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/timegrid@4.1.0/main.min.js"></script>
     <script src="{{ asset('build/final/assets/js/jquery.min.js') }}"></script>
     <script src="{{ asset('build/final/assets/js/popper.min.js') }}"></script>
     <script src="{{ asset('build/final/assets/js/bootstrap.min.js') }}"></script>
