--- a/templates/message/read.html.twig
+++ b/templates/message/read.html.twig
@@ -24,10 +24,10 @@
 								</thead>
 								<tbody>
 								<tr class="job-items">
-									<td class="title"><h5>{{ message.title }}</h5></td>
+									<td class="title"><h5>{{ message.title|trans }}</h5></td>
 									<td class="title"><h5>Message de {{ message.sender.email }}</h5></td>
 									<td class="title"><h5>Le {{ message.createdAt|date }}</h5></td>
-									<td class="title"><h5>{{ message.message }}</h5></td>
+									<td class="title"><h5>{{ message.message|trans }}</h5></td>
 									<td><a href="{{path("received")}}" class="btn btn-primary">Retour à la boite de réception</a></td>
 
 									{#  	<td class="action">
