--- a/templates/annonce/AddAnnonceWorker.twig
+++ b/templates/annonce/AddAnnonceWorker.twig
@@ -280,7 +280,7 @@
                     <div class="form-group row">
                       <label class="col-md-3 col-form-label"></label>
                       <div class="col-md-9">
-                             {{ form_widget(annonceForm.chercher, {'attr': {'class': 'button'} }) }}
+                             {{ form_widget(annonceForm.publier, {'attr': {'class': 'button'} }) }}
                       </div>
                     </div>
                   </div>
