--- a/templates/user/Travailleur/TravailleurEditAnnonce.html.twig
+++ b/templates/user/Travailleur/TravailleurEditAnnonce.html.twig
@@ -113,7 +113,7 @@
                                 <div class="form-group row">
                                     <label class="col-md-3 col-form-label"></label>
                                     <div class="col-md-9">
-                                        {{ form_widget(form.chercher, {'attr': {'class': 'button'} }) }}
+                                        {{ form_widget(form.publier, {'attr': {'class': 'button'} }) }}
                                     </div>
                                 </div>
                             </div>
