--- a/templates/user/Employeur/EmployerManageJobs.html.twig
+++ b/templates/user/Employeur/EmployerManageJobs.html.twig
@@ -12,7 +12,7 @@
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="#">Accueil</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Modifier Sociéte</li>
+                            <li class="breadcrumb-item active" aria-current="page">Mes Offres</li>
                         </ol>
                     </nav>
                 </div>
@@ -49,8 +49,8 @@
                     </thead>
                     <tbody>
 
-                   {% for annonces in app.user.annonces %}
-                       {% if annonces.user.id==app.user.id %}
+                   {% for annonces in app.user.offres %}
+                       {% if annonces.user.id == app.user.id %}
 
                            <tr class="job-items">
                         <td class="title">
@@ -61,7 +61,7 @@
                             <span class="job-type full-time"><a href="#"><i data-feather="clock"></i>{{annonces.type}}</a></span>
                           </div>
                         </td>
-                        <td class="application"><a href="#">{{ annonces.apply|length }}</a></td>
+                        <td class="application"><a href="#">{{ annonces.postules|length }}</a></td>
                         <td class="deadline">{{annonces.expire|date('d-m-Y')}}</td>
                           {% if 'now'|date('d-m-Y') < annonces.expire|date('d-m-Y')  %}
                           <td class="status active">Active</td>
@@ -70,7 +70,7 @@
 
                           {% endif %}
                         <td class="action">
-                          <a href="{{ path('annonce_show', {id: annonces.id}) }}" class="preview" title="Preview"><i data-feather="eye"></i></a>
+                          <a href="{{ path('annonce_show_employer', {id: annonces.id}) }}" class="preview" title="Preview"><i data-feather="eye"></i></a>
                           <a href="{{ path('Myannonce_showEmployer', {id: annonces.id}) }}" class="edit" title="Edit"><i data-feather="edit"></i></a>
                           <a href="{{ path('annonce_remove', {id: annonces.id}) }}" class="remove" title="Delete"><i data-feather="trash-2"></i></a>
                         </td>
