--- a/templates/user/Employeur/EmployerManageCandidats.html.twig
+++ b/templates/user/Employeur/EmployerManageCandidats.html.twig
@@ -65,9 +65,11 @@
                             </div>
                           </div>
                         </td>
-                        <td class="status"><i data-feather="check-circle"></i>Agent infirmier</td>
+                        <td class="status"><i data-feather="check-circle"></i>{{apply.offre.titre}}</td>
                         <td class="action">
                         <a class="download" href="#" data-toggle="modal" data-target="#apply-popup-id">Demande</a>
+                        <a class="download" href="#" data-toggle="modal" data-target="#apply-popup-id">Entretien</a>
+
                           <a href="#" class="inbox"><i data-feather="mail"></i></a>
                           <a href="#" class="remove"><i data-feather="trash-2"></i></a>
                         </td>
