--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -206,7 +206,7 @@
                 <li><i class="fas fa-plus-square"></i><a href="/travailleur/Publier">Publier demande d'emploi</a></li>
                 <li><i class="fas fa-heart"></i><a href="MesAnnonces">Liste des annonces</a></li>
                 <li><i class="fas fa-check-square"></i><a href="/travailleur/GererOffres">Liste de demandes</a></li>
-                <li><i class="fab fa-facebook-messenger"></i><a href="/travailleur/GererOffres">Messages</a></li>
+                <li><i class="fab fa-facebook-messenger"></i><a href="/message">Messages</a></li>
 
             </ul>
             <ul class="delete">
