--- a/templates/message/send.html.twig
+++ b/templates/message/send.html.twig
@@ -15,9 +15,10 @@
                                 <div class="col">
                                     <h1>Envoyer un message</h1>
                                     {{ form(form) }}
-                                    <a href="{{ path("message") }}" class="button">Accueil</a>
-                                    <a href="{{ path("received") }}" class="button">Boîte de réception</a>
-                                    <a href="{{ path("sent") }}" class=button>Eléments envoyés</a>
+                                    <br>
+                                    <a href="{{ path("message") }}" class="btn btn-primary">Accueil</a>
+                                    <a href="{{ path("received") }}" class="btn btn-primary">Boîte de réception</a>
+                                    <a href="{{ path("sent") }}" class="btn btn-primary">Eléments envoyés</a>
 
 
                                 </div>
