--- a/templates/message/received.html.twig
+++ b/templates/message/received.html.twig
@@ -42,13 +42,18 @@
 
 
 								<div class="col">
+								<br>
 									<a href="{{path("send")}}" class="btn btn-primary">Envoyer un message</a>
 								</div>
-								<a href="{{ path("message") }}" class="button">Accueil</a>
-								<a href="{{ path("received") }}" class="button">Boîte de réception</a>
-								<a href="{{ path("message") }}" class="button">Eléments envoyés</a>
-
+								<br>
+								
 							</div>
+							<br>
+							<br>
+							    <div class="col">
+								   <a href="{{ path("message") }}" class="btn btn-primary">Accueil</a>
+								   <a href="{{ path("sent") }}" class="btn btn-primary">Eléments envoyés</a>
+                                </div>
 					</div>
 					{%block sidebar%}    {{ parent() }}
 					{% endblock %}
