--- a/templates/commentaire/indexAdmin.html.twig
+++ b/templates/commentaire/indexAdmin.html.twig
@@ -4,6 +4,22 @@
 
 {% block body %}
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script>
+        $(document).ready(function(){
+            $("#myInput").on("keyup", function() {
+                var value = $(this).val().toLowerCase();
+                $("#rech tr").filter(function() {
+                    $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+                });
+            });
+        });
+    </script>
+
+    <input class="form-control" id="myInput" type="text" id="navbar-search-input" placeholder="Search now" aria-label="search" aria-describedby="search">
+
+
     <table class="table">
         <thead>
             <tr>
@@ -13,7 +29,7 @@
                 <th>Contenue</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody id="rech">
         {% for comment in commentaires %}
             <tr>
                 <td>{{ comment.date ? comment.date|date('Y-m-d') : '' }}</td>
