--- a/templates/commentaire/index.html.twig
+++ b/templates/commentaire/index.html.twig
@@ -32,6 +32,19 @@
                     </div><br><br>
                     Comments :<HR>
                     {% for c in comment %}
+
+
+                    {% set like =0 %}
+                    {% set deslike =0 %}
+                    {% for v in vote %}
+                        {% if v.typeVote == 1 and v.idPost.idCommentaire == c.idCommentaire %}
+                            {% set like = like +1  %}
+                        {% endif %}
+                        {% if v.typeVote == 2 and v.idPost.idCommentaire == c.idCommentaire %}
+                            {% set deslike = deslike+1 %}
+                        {% endif %}
+                        {% endfor %}
+
                         <div class="job-filter-result">
                             <div class="job-list">
 
@@ -42,8 +55,17 @@
                                         </div>
                                     </div>
                                     <div class="more">
+
+                                    {% if user.id == c.idUser.id %}
                                         <a href="{{ path('comment_delete', {'id': c.idCommentaire,'idp': post.idPost}) }}" class="button" >Delete</a><br><br>
                                         <a href="{{ path('app_commentaire_edit', {'idCommentaire': c.idCommentaire,'idp': post.idPost}) }}" class="button">Update</a>
+                                     {% else %}
+                                     {{deslike}}<br>
+                                         <a href="{{ path('app_vote_newdeslike', {'id': c.idCommentaire,'idp': post.idPost}) }}" class="button" >Deslike</a><br><br>
+                                       {{like}}
+                                       <br>
+                                        <a href="{{ path('app_vote_newlike', {'id': c.idCommentaire,'idp': post.idPost}) }}" class="button">Like</a>
+                                      {% endif %}
                                         <p class="deadline"> Date: {{ post.dateP ? post.dateP|date('Y-m-d') : '' }}</p>
                                     </div>
                                 </div>
@@ -51,6 +73,8 @@
 
 
                         </div>
+                             {% set like =0 %}
+                            {% set deslike =0 %}
                     {% endfor %}
                 </div>
 
