--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -27,10 +27,13 @@
 
                 </td>
                 <td>
-                
-                                                <a href="{{ path('post_refuser', {'id': post.idPost}) }}" class="button" >Refuser</a><br><br>
-                                                <a href="{{ path('post_accepter', {'id': post.idPost}) }}" class="button">Accepter</a>
-
+                   {% if  post.etat == "acceptée" %}
+                  <a href="{{ path('app_commentaire_index', {'id': post.idPost}) }}" class="btn btn-primary" >Details   </a><br>
+                   {% elseif  post.etat == "acceptée" or post.etat == "refusée"  %}
+                   {% else %}
+                  <a href="{{ path('post_refuser', {'id': post.idPost}) }}" class="btn btn-primary" >Refuser</a><br>
+                  <a href="{{ path('post_accepter', {'id': post.idPost}) }}" class="btn btn-success">Accepter</a>
+                   {% endif %}
                 </td>
             </tr>
         {% endfor %}
