--- a/templates/post/indexFront.html.twig
+++ b/templates/post/indexFront.html.twig
@@ -17,15 +17,19 @@
                                         </a>
                                     <div class="body">
                                         <div class="content">
-                                            <h4><a href="job-details.html" style="text-align: center !important;">{{ p.description}} </a></h4>
+                                            <p ><a href="#" style="text-align: center !important;">{{ p.description}} </a></p>
                                             <div class="info">
                                             </div>
                                         </div>
                                         <div class="more">
+                      
+                                                {% if p.etat == "acceptée" %}
 
                                                 <a href="{{ path('post_delete', {'id': p.idPost}) }}" class="button" >Delete</a><br><br>
-                                                <a href="{{ path('app_post_edit', {'idPost': p.idPost}) }}" class="button">Update</a>
-
+                                                {% else %}
+                                                  <a href="{{ path('post_delete', {'id': p.idPost}) }}" class="button" >Delete</a><br><br>
+                                                  <a href="{{ path('app_post_edit', {'idPost': p.idPost}) }}" class="button">Update</a>
+                                                 {% endif %}
                                             <p class="deadline"> Date: {{ p.dateP ? p.dateP|date('Y-m-d') : '' }}</p>
                                         </div>
                                     </div>
