--- a/templates/test/quizzDispo.html.twig
+++ b/templates/test/quizzDispo.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig'%}
 
-{% block title %}Certification Disponibles{% endblock %}
+{% block title %}Quizz Disponibles{% endblock %}
 
 
 
@@ -24,11 +24,11 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="breadcrumb-area">
-                        <h1>Liste des certifications disponibles</h1>
+                        <h1>Liste des Quizz disponibles</h1>
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="#">Acceuil</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">Certifications</li>
+                                <li class="breadcrumb-item active" aria-current="page">Quizz</li>
                             </ol>
                         </nav>
                     </div>
