--- a/templates/annonce/AddAnnonceWorker.twig
+++ b/templates/annonce/AddAnnonceWorker.twig
@@ -274,7 +274,7 @@
                     <div class="row">
                       <label class="col-md-3 col-form-label">Parlez de vous</label>
                       <div class="col-md-9">
-                             {{ form_widget(annonceForm.description, {'attr': {'class': 'tinymce-editor tinymce-editor-1' } }) }}
+                             {{ form_widget(annonceForm.description, {'attr': {'class': 'form-control' } }) }}
                       </div>
                     </div>
                     <div class="form-group row">
